<resources>

    <string name="app_name">Poolit</string>
    <string name="title_activity_cart_menu">CartMenu</string>
    <string name="title_activity_cart_field">CartField</string>
    <string name="action_messages">Messages</string>
    <string name="social_notifications">Notifications</string>
    <string name="action_Logout">Logout</string>
    <string name="menu_account_info">Account Info</string>
    <string name="menu_new_group">New Group</string>
    <string name="menu_new_pool">New Pool</string>
    <string name="menu_proofs_bankdetails">Upload Proofs and Bank details</string>
    <string name="menu_settings_status">Settings &amp; Status</string>
    <string name="new_pool_create">Create</string>
    <string name="create_pool">Create</string>
    <string name="actionbar_search">Search Poolit</string>
    <string name="menu_accc_info">Account Info</string>
    <string name="acc_info_edit">Edit</string>
    <string name="no_contacts">No contacts in your contact list.</string>
    <string name="Upload_id_proofs_menu">SAVE</string>


</resources>
