<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:id="@+id/actionbar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/actionbar_search"
        app:showAsAction="always"
        />


    <item android:id="@+id/action_messages"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_messages"
        app:showAsAction="always"
        />

    <item android:id="@+id/social_notifications"
        android:icon="@drawable/ic_stat_social_notifications"
        android:title="@string/social_notifications"
        app:showAsAction="always"/>

    <item android:id="@+id/Account_Info"
        android:title="@string/menu_account_info"
        app:showAsAction="never"/>

    <item android:id="@+id/New_Group"
        android:title="@string/menu_new_group"
        app:showAsAction="never"/>

    <item android:id="@+id/New_Pool"
        android:title="@string/menu_new_pool"
        app:showAsAction="never"/>

    <item android:id="@+id/Bank_details"
        android:title="@string/menu_proofs_bankdetails"
        app:showAsAction="never"/>

    <item android:id="@+id/Settings_status"
        android:title="@string/menu_settings_status"
        app:showAsAction="never"/>

    <item android:id="@+id/action_Logout"
        android:title="@string/action_Logout"
        app:showAsAction="never"/>


</menu>